<resources>
    <string name="halved">: Halved</string>
    <string name="doubled">: Doubled</string>
    <string name="tripled">: Tripled</string>
    <string name="app_name">Simple Chef</string>
    <string name="my_cookbook">My Cookbook</string>
    <string name="new_recipe">New Recipe</string>
    <string name="settings">Settings</string>
    <string name="cookbook_recipes">Recipes</string>
    <string name="TextView1">TextView1</string>
    <string name="TextView2">TextView2</string>
    <string name="Instructions">Instructions</string>
    <string name="edit_recipe">edit</string>
    <string name="recipe_title_text">Recipe Title</string>
    <string name="recipe_done_button">Done</string>
    <string name="recipe_quantity_desc">Quantity</string>
    <string name="recipe_measurement_desc">Measurement</string>
    <string name="recipe_item_desc">Item</string>
    <string name="recipe_item_text">Item Text</string>
    <string name="recipe_instruction_text">Instruction</string>
    <string name="two">: Two</string>
    <string-array name="recipe_array">
        <item>Tomatoe Soup</item>
        <item>Chicken Salad</item>
        <item>Lasagna</item>
        <item>Meatball Parm</item>
        <item>Mac and Cheese</item>
        <item>Apple Pie</item>
        <item>Penne Vodka</item>
    </string-array>
    <string-array name="quantity_arrays">
        <item>1/16</item>
        <item>1/8</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>2/3</item>
        <item>3/4</item>
        <item>1</item>
        <item>1 1/4</item>
        <item>1 1/3</item>
        <item>1 1/2</item>
        <item>1 2/3</item>
        <item>1 3/4</item>
        <item>2</item>
        <item>2 1/4</item>
        <item>2 1/3</item>
        <item>2 1/2</item>
        <item>2 2/3</item>
        <item>2 3/4</item>
        <item>3</item>
        <item>3 1/4</item>
        <item>3 1/3</item>
        <item>3 1/2</item>
        <item>3 2/3</item>
        <item>3 3/4</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
